--- a/rule/msc/tbl_detail_tbmt.ini
+++ b/rule/msc/tbl_detail_tbmt.ini
@@ -1,35 +1,29 @@
 [config]
-range = 9,22
-unset = ''
 
 [template]
-tr_number = 1
-td_number = 2
+label = ''
 type = 'str'
-dom = 0
-dom_number = 0
-dom_property = 'plaintext'
 
 [so_tbmt : template]
+label = 'Số TBMT'
 
 [loai_tb : template]
-tr_number = 2
+label = 'Loại thông báo'
 
 [linh_vuc : template]
-tr_number = 2
-td_number = 4
+label = 'Lĩnh vực thông báo'
 
 [hinh_thuc_tb : template]
-tr_number = 3
+label = 'Hình thức thông báo'
 
 [goi_thau : template]
-tr_number = 4
+label = 'Tên gói thầu'
 
 [thuoc_du_an : template]
-tr_number = 5
+label = 'Thuộc dự án'
 
 [nguon_von : template]
-tr_number = 6
+label = 'Nguồn vốn'
 
 [ben_mt : template]
 tr_number = 7
@@ -53,5 +47,9 @@ tr_number = 11
 [han_cuoi_nhan_hs : template]
 tr_number = 12
 
-[hs_moi_thau : template]
+[thoi_diem_dong_thau : template]
 tr_number = 13
+
+[hs_moi_thau : template]
+tr_number = 14
+dom_property = 'innertext'
